[package]
name = "mpmc"
version = "0.1.7-alpha.0"
authors = ["Dmitry Vyukov", "Brian Martin <brayniac@gmail.com>"]

homepage = "https://github.com/brayniac/mpmc"
documentation = "https://docs.rs/mpmc"
repository = "https://github.com/brayniac/mpmc"

readme = "README.md"
license-file = "LICENSE"

description = "copy-pasted from old rust stdlib"

keywords = ["mpmc", "queue", "no_std"]
